fixed modal height issue--now wraps text if too long

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,8 +1,9 @@
 /* Default */
 .divHidden {
 	display: block;
-	width: max-content;
+	width: 90%;
 	min-width: 200px;
+	max-width: 600px;
 	border-radius: 5px;
 	box-sizing: border-box;
 	border: 3px solid transparent;
@@ -16,7 +17,7 @@
 .divShown {
 	composes: divHidden;
 	display: block;
-	height: 2.5rem;
+	height: max-content;
 	padding: 5px;
 	margin: 0 auto;
 }
@@ -39,6 +40,8 @@
 	color: black;
 	padding: 0.1rem 1rem;
 	height: 0rem;
+	margin: 0 auto;
+	text-align: center;
 }
 
 .paragraphShown {
